--- a/package.json
+++ b/package.json
@@ -7,55 +7,56 @@
 	"description": "Link Three - serve",
 	"main": "app.js",
 	"scripts": {
-	  "start": "razzle start",
-	  "build": "razzle build",
-	  "debug": "yarn start --inspect --inspect-port 9230",
-	  "test": "razzle test --env=jsdom",
-	  "start:prod": "NODE_ENV=production node build/server.js",
-	  "lint": "eslint .",
-	  "lint:style": "stylelint ./src/**/*.css ./public/**/*.css",
-	  "ci": "yarn lint && yarn lint:style && yarn lint:markdown && yarn test",
-	  "lint:markdown": "markdownlint .github/*.md && markdownlint README.md"
+		"start": "razzle start",
+		"build": "razzle build",
+		"debug": "yarn start --inspect --inspect-port 9230",
+		"test": "razzle test --env=jsdom",
+		"start:prod": "NODE_ENV=production node build/server.js",
+		"lint": "eslint .",
+		"lint:style": "stylelint ./src/**/*.css ./public/**/*.css",
+		"ci": "yarn lint && yarn lint:style && yarn lint:markdown && yarn test",
+		"lint:markdown": "markdownlint .github/*.md && markdownlint README.md"
 	},
 	"dependencies": {
-	  "@fortawesome/fontawesome-svg-core": "^1.2.36",
-	  "@fortawesome/free-brands-svg-icons": "^5.15.4",
-	  "@fortawesome/free-regular-svg-icons": "^5.15.4",
-	  "@fortawesome/free-solid-svg-icons": "^5.15.4",
-	  "@fortawesome/react-fontawesome": "^0.1.16",
-	  "compression": "^1.7.4",
-	  "express": "^4.17.2",
-	  "morgan": "^1.10.0",
-	  "prop-types": "^15.7.2",
-	  "react": "^17.0.2",
-	  "react-dom": "^17.0.2",
-	  "react-router-dom": "^6.2.1",
-	  "serialize-javascript": "^6.0.0"
+		"@fortawesome/fontawesome-svg-core": "^1.2.36",
+		"@fortawesome/free-brands-svg-icons": "^5.15.4",
+		"@fortawesome/free-regular-svg-icons": "^5.15.4",
+		"@fortawesome/free-solid-svg-icons": "^5.15.4",
+		"@fortawesome/react-fontawesome": "^0.1.16",
+		"compression": "^1.7.4",
+		"eventsource": "^2.0.2",
+		"express": "^4.17.2",
+		"morgan": "^1.10.0",
+		"prop-types": "^15.7.2",
+		"react": "^17.0.2",
+		"react-dom": "^17.0.2",
+		"react-router-dom": "^6.2.1",
+		"serialize-javascript": "^6.0.0"
 	},
 	"devDependencies": {
-	  "@babel/core": "^7.17.2",
-	  "@babel/eslint-parser": "^7.17.0",
-	  "@babel/preset-react": "^7.16.7",
-	  "babel-preset-razzle": "^4.2.14",
-	  "eslint": "^8.3.0",
-	  "eslint-config-prettier": "^8.3.0",
-	  "eslint-plugin-import": "^2.25.3",
-	  "eslint-plugin-jsx": "^0.1.0",
-	  "eslint-plugin-node": "^11.1.0",
-	  "eslint-plugin-prettier": "^4.0.0",
-	  "eslint-plugin-promise": "^5.1.1",
-	  "eslint-plugin-react": "^7.27.1",
-	  "html-webpack-plugin": "^5.5.0",
-	  "markdownlint-cli": "^0.31.1",
-	  "mini-css-extract-plugin": "^2.5.3",
-	  "prettier": "^2.5.1",
-	  "razzle": "^4.2.14",
-	  "razzle-dev-utils": "^4.2.14",
-	  "react-test-renderer": "^17.0.2",
-	  "stylelint": "^14.5.0",
-	  "stylelint-config-prettier": "^9.0.3",
-	  "url": "^0.11.0",
-	  "webpack": "^5.68.0",
-	  "webpack-dev-server": "^4.7.4"
+		"@babel/core": "^7.17.2",
+		"@babel/eslint-parser": "^7.17.0",
+		"@babel/preset-react": "^7.16.7",
+		"babel-preset-razzle": "^4.2.14",
+		"eslint": "^8.3.0",
+		"eslint-config-prettier": "^8.3.0",
+		"eslint-plugin-import": "^2.25.3",
+		"eslint-plugin-jsx": "^0.1.0",
+		"eslint-plugin-node": "^11.1.0",
+		"eslint-plugin-prettier": "^4.0.0",
+		"eslint-plugin-promise": "^5.1.1",
+		"eslint-plugin-react": "^7.27.1",
+		"html-webpack-plugin": "^5.5.0",
+		"markdownlint-cli": "^0.31.1",
+		"mini-css-extract-plugin": "^2.5.3",
+		"prettier": "^2.5.1",
+		"razzle": "^4.2.15",
+		"razzle-dev-utils": "^4.2.17",
+		"react-test-renderer": "^17.0.2",
+		"stylelint": "^14.5.0",
+		"stylelint-config-prettier": "^9.0.3",
+		"url": "^0.11.0",
+		"webpack": "^5.68.0",
+		"webpack-dev-server": "^4.7.4"
 	}
-  }
+}
